--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,19 @@
             <artifactId>cache-api</artifactId>
             <version>0.2-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+
+
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
