--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
     <packaging>jar</packaging>
 
     <name>JSR107 RI</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/jsr107/RI</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <skipCheckstyle>false</skipCheckstyle>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
@@ -100,7 +100,6 @@
                     </suppressionsLocation>
                     <headerLocation>${basedir}/checkstyle/ClassHeader.txt
                     </headerLocation>
-                    <skip>${skipCheckstyle}</skip>
                     <enableRSS>false</enableRSS>
                     <linkXRef>true</linkXRef>
                     <consoleOutput>true</consoleOutput>
