Change CacheManager to return UserTransaction. Add a provided dependency for jta which will only require cache implementers to declare a JTA dependency. If this is done as a "provided" dependency end user code will not have a required dependency on JTA unless using the method cacheManager. getUserTransaction.

--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-    
+
     <modules>
         <module>cache-annotations-ri</module>
         <module>cache-ri-impl</module>
-    </modules>    
+    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -31,7 +40,7 @@
                 <artifactId>cache-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
-    
+
             <dependency>
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
@@ -39,7 +48,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <build>
         <pluginManagement>
             <plugins>
