--- a/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>javax.cache.implementation</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>0.3-SNAPSHOT</version>
+        <version>0.3</version>
     </parent>
     
     <artifactId>cache-annotations-ri-cdi</artifactId>
