--- a/cache-annotations-ri/cache-annotations-ri-common/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>javax.cache.implementation</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>0.4</version>
+        <version>0.5-SNAPSHOT</version>
     </parent>
     
     <artifactId>cache-annotations-ri-common</artifactId>
