--- a/cache-ri-impl/pom.xml
+++ b/cache-ri-impl/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>javax.cache.implementation</groupId>
         <artifactId>cache-ri</artifactId>
-        <version>0.4</version>
+        <version>0.5-SNAPSHOT</version>
     </parent>
     <artifactId>cache-ri-impl</artifactId>
     <packaging>jar</packaging>
