--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <modules>
         <module>cache-annotations-ri</module>
+        <module>cache-ri-common</module>
         <module>cache-ri-impl</module>
     </modules>
 
