--- a/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>javax.cache.implementation</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>0.5</version>
+        <version>0.6-SNAPSHOT</version>
     </parent>
     
     <artifactId>cache-annotations-ri-guice</artifactId>
