--- a/cache-ri-common/pom.xml
+++ b/cache-ri-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>javax.cache.implementation</groupId>
         <artifactId>cache-ri</artifactId>
-        <version>0.5</version>
+        <version>0.6-SNAPSHOT</version>
     </parent>
     <artifactId>cache-ri-common</artifactId>
     <packaging>jar</packaging>
