Changed javax.cache.implementation groupIds to the correct org.jsr107.ri

--- a/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>javax.cache.implementation</groupId>
+        <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
         <version>0.6-SNAPSHOT</version>
     </parent>
 
-    <groupId>javax.cache.implementation</groupId>
+    <groupId>org.jsr107.ri</groupId>
      <artifactId>cache-annotations-ri-guice</artifactId>
 
     <packaging>jar</packaging>
