--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>oss-parent</artifactId>
         <version>7</version>
     </parent>
-    <groupId>javax.cache.implementation</groupId>
+    <groupId>org.jsr107.ri</groupId>
     <artifactId>cache-ri</artifactId>
     <version>0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
