--- a/cache-ri-common/pom.xml
+++ b/cache-ri-common/pom.xml
@@ -21,5 +21,13 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
 </project>
