--- a/cache-ri-impl/pom.xml
+++ b/cache-ri-impl/pom.xml
@@ -18,14 +18,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jsr107.ri</groupId>
-            <artifactId>cache-ri-common</artifactId>
-            <version>0.6-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
