--- a/cache-annotations-ri/cache-annotations-ri-common/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>0.6-SNAPSHOT</version>
+        <version>0.6</version>
     </parent>
     
     <artifactId>cache-annotations-ri-common</artifactId>
