--- a/cache-ri-impl/pom.xml
+++ b/cache-ri-impl/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-ri</artifactId>
-        <version>0.61</version>
+        <version>0.7-SNAPSHOT</version>
     </parent>
     <artifactId>cache-ri-impl</artifactId>
     <packaging>jar</packaging>
