--- a/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>0.7</version>
+        <version>0.8-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jsr107.ri</groupId>
