Reformatting to a 2 character indent

--- a/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -6,7 +7,7 @@
         <artifactId>cache-annotations-ri</artifactId>
         <version>0.8-SNAPSHOT</version>
     </parent>
-    
+
     <artifactId>cache-annotations-ri-cdi</artifactId>
     <packaging>jar</packaging>
 
@@ -31,5 +32,5 @@
             <artifactId>cdi-api</artifactId>
         </dependency>
     </dependencies>
-    
+
 </project>
