--- a/cache-annotations-ri/cache-annotations-ri-spring/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-spring/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>0.8</version>
+        <version>0.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>cache-annotations-ri-spring</artifactId>
