--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.jsr107.ri</groupId>
     <artifactId>cache-ri</artifactId>
-    <version>0.9</version>
+    <version>0.10-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>JSR107 RI</name>
