--- a/pom.xml
+++ b/pom.xml
@@ -180,4 +180,13 @@
         </repository>
     </repositories>
 
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+
 </project>
