--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.jsr107.ri</groupId>
     <artifactId>cache-ri</artifactId>
-    <version>0.11</version>
+    <version>0.12-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>JSR107 RI</name>
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>javax.cache</groupId>
                 <artifactId>cache-api</artifactId>
-                <version>1.0.0-PFD</version>
+                <version>0.12-SNAPSHOT</version>
             </dependency>
 
             <dependency>
