--- a/cache-annotations-ri/pom.xml
+++ b/cache-annotations-ri/pom.xml
@@ -18,4 +18,20 @@
         <module>cache-annotations-ri-spring</module>
         <module>cache-annotations-ri-guice</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.atlassian.maven.plugins</groupId>
+                <artifactId>maven-clover2-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <cloverDatabase>${java.io.tmpdir}/clover/clover.db
+                    </cloverDatabase>
+                    <singleCloverDatabase>true</singleCloverDatabase>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
