More clover all over all over all over...

--- a/cache-annotations-ri/pom.xml
+++ b/cache-annotations-ri/pom.xml
@@ -29,6 +29,8 @@
                     <cloverDatabase>${java.io.tmpdir}/clover/clover.db
                     </cloverDatabase>
                     <singleCloverDatabase>true</singleCloverDatabase>
+                    <instrumentation>method</instrumentation>
+                    <includesTestSourceRoots>false</includesTestSourceRoots>
                 </configuration>
             </plugin>
         </plugins>
