--- a/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-guice/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jsr107.ri</groupId>
