--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.jsr107.ri</groupId>
     <artifactId>cache-ri</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>JSR107 RI</name>
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>javax.cache</groupId>
                 <artifactId>cache-api</artifactId>
-                <version>1.0.1</version>
+                <version>1.0.1-SNAPSHOT</version>
             </dependency>
 
             <dependency>
@@ -48,7 +48,7 @@
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.1</version>
+                    <version>1.0.1-SNAPSHOT</version>
                     <configuration>
                         <lifecycleMappingMetadata>
                             <pluginExecutions>
