--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>javax.cache</groupId>
                 <artifactId>cache-api</artifactId>
-                <version>1.0.1-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
 
             <dependency>
