--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
+        <!--Fixes broken Maven 3 warning-->
+        <relativePath/>
     </parent>
     <groupId>org.jsr107.ri</groupId>
     <artifactId>cache-ri</artifactId>
@@ -127,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.10.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
