--- a/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
@@ -19,6 +19,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.cache</groupId>
             <artifactId>cache-api</artifactId>
         </dependency>
