--- a/cache-ri-impl/pom.xml
+++ b/cache-ri-impl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-ri</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
     <artifactId>cache-ri-impl</artifactId>
     <packaging>jar</packaging>
