--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
                 <version>1.0-SP4</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
