Support for Spring 6 / Jakarta EE 9/10

--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.enterprise</groupId>
-                <artifactId>cdi-api</artifactId>
-                <version>1.0-SP4</version>
+                <groupId>jakarta.enterprise</groupId>
+                <artifactId>jakarta.enterprise.cdi-api</artifactId>
+                <version>4.0.1</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
