--- a/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
@@ -28,8 +28,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
         </dependency>
     </dependencies>
 
