--- a/cache-annotations-ri/cache-annotations-ri-spring/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-spring/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>3.2.18.RELEASE</spring.version>
+        <spring.version>6.0.0</spring.version>
     </properties>
 
     <dependencies>
